@@ -78,6 +78,21 @@ name|lucene
 operator|.
 name|analysis
 operator|.
+name|standard
+operator|.
+name|StandardAnalyzer
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|tokenattributes
 operator|.
 name|FlagsAttribute
@@ -215,6 +230,52 @@ block|,
 literal|"abhor"
 block|,
 literal|"accent"
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testStopwords
+specifier|public
+name|void
+name|testStopwords
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Analyzer
+name|a
+init|=
+operator|new
+name|SnowballAnalyzer
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_CURRENT
+argument_list|,
+literal|"English"
+argument_list|,
+name|StandardAnalyzer
+operator|.
+name|STOP_WORDS_SET
+argument_list|)
+decl_stmt|;
+name|assertAnalyzesTo
+argument_list|(
+name|a
+argument_list|,
+literal|"the quick brown fox jumped"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"quick"
+block|,
+literal|"brown"
+block|,
+literal|"fox"
+block|,
+literal|"jump"
 block|}
 argument_list|)
 expr_stmt|;
